--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.19.2"
-  }
+  },
+  "name": "proiectweb-1",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
